@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.43 2004/01/09 01:23:32 piru Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.44 2004/01/09 12:08:39 piru Exp $
 ==========================================================================
 
 2.9000
@@ -31,6 +31,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.43 2004/01/09 01:23:32 piru Exp $
             fix: amigaos: fixed a race quitting the cruncher thread
             new: MorphOS port
             new: morphos: added resethandler, client will quit before reset
+            fix: amigaos: fixed timer.device exit crash
 
 2.9007-486  imp: nextstep: include assembler cores on x86
             imp: nextstep: fix console handling for config menu
